--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Student Scheduler</string>
+    <string name="channel_name">StudentChannel</string>
+    <string name="channel_description">Notifications for Student Scheduler App</string>
 </resources>
